# kafka-dummy-app

./: README.md  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: ci.yaml  ci_base.yaml  ci_integrated.yaml  ci_python.yaml  ci_under_replication.yaml  ci_workflow.yaml
kafka_app/: core.py  main.py
tests/integration/: test_kafka_scale_up.py
